[package]
name = "cf-systems-cli"
version = "0.1.0"
authors = ["amaca <amaca@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rustls = "0.18.1"
webpki = "0.21.3"
webpki-roots = "0.20.0"
url = "2.1.1"